src/test/resources/Parser/SyntaxErrors/AvoidCastingEverythingToBool.front
class A:

    doNot(a: A) {
        if (a) {

        }
    }